Lagt til noen points

--- a/Data som trengs2.Rmd
+++ b/Data som trengs2.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-### Kategorier:
+### Seksjoner:
 
 -   Arbeid, lønn og utdanning
 -   Befolkning og bolig
@@ -33,8 +33,9 @@ knitr::opts_chunk$set(echo = TRUE)
 -   Se om det er forskjell på seksjonene om hvem som fyller ut hva.
 
 -   En oversikt over statistikker som refererer til Klass5 (<https://www.ssb.no/klass/>).
-
     -   Prosentvis overordnet og under hver seksjon
+-   Hvilke/hvor mange gir "uncertainty estimates"    
+
 
 ### Eventuelt:
 
@@ -42,3 +43,11 @@ knitr::opts_chunk$set(echo = TRUE)
 -   Forskjellen på "ikke relevant" og ikke fylt ut.
 -   Bruke internet archive til å se på dato for publisering a statistikk og av "om statistikken"
 -   Hvilke metoder blir brukt i forskjellige seksjoner (feks sesongjustering).
+
+```{r}
+getwd()
+setwd("C:/Users/tyrag/OneDrive - Universitetet i Oslo/ISSSV1337/SSB---case-project")
+getwd()
+```
+
+
