--- a/Webscraping attempts/Forsøk2.Rmd
+++ b/Webscraping attempts/Forsøk2.Rmd
@@ -6,55 +6,70 @@ output: pdf_document
 ```{r setup}
 library(tidyverse)
 library(rvest)
+library(xml2)
 ```
 
 ## Kode fra dag 7
-
-Men skreddersydd til ssb-casen vår.
-
+Her laster vi ned de første hovedkategoriene på forsiden til SSB. Det er 23 linker, vi laster ned. 
+  
 ```{r}
 ssb <- download_html(
   url = "https://www.ssb.no/",
   file = "../Data/SSB.html"
 )
 
-# kategorier <- ["/arbeid-og-lonn"]
+# hovedkategorier <- ["/arbeid-og-lonn"]
 
-links <- read_html("../Data/SSB.html") %>%
-  html_nodes('a[class="ssb-link with-icon"]') %>% # Vet ikke om jeg trenger denne
-  # html_elements("a") %>%
-  html_attr("href") %>%
-  # str_extract("") #%>%
-  # na.omit() %>% 
-  str_c("https://ssb.no", .)
-
-links
-# FUNKER!
+hovedkategorier <- read_html("../Data/SSB.html") %>%
+  html_nodes('a[class="ssb-link with-icon"]') %>% # klassenavnet for 'hovedkategoriene', vi leser ut hver node som oppfyller dette kravet
+  html_attr("href") %>% #forteller at det er en link vi vil ha
+  str_c("https://ssb.no", .) #setter sammen hva vi henter med html_nodes med dette
+hovedkategorier
 ```
 
-Laste ned alle nettsidene:
-
-```{r}
-# Nå trenger vi en for-loop som laster ned alle 23 linkene som html-fil
-```
+Laster ned alle nettsidene:
 
 Iterere gjennom alle 23 html-filene lasted ned lokalt for å finne underlinkene:
 
 ```{r}
 # Step 2: Download all the webpages from the links you just made
-linkstopic <- str_remove(links, "https://ssb.no") 
+hovedkategori_lastet <- str_remove(hovedkategorier, "https://ssb.no") 
 
-for(i in 1:length(links)) { # For all the links... 
-   
-  download.file(links[[i]], 
-                destfile = str_c("../Data/links/", linkstopic[i], ".html")) 
-  # Download one html-file after another into the folder 
-   
+for(i in 1:length(hovedkategorier)) {
+  download.file(hovedkategorier[[i]], 
+                destfile = str_c("../Data/hovedkategorier/", hovedkategori_lastet[i], ".html")) 
+  # Download one html-file after another into the folder hovedkategorier
     Sys.sleep(2) 
   # Setting a timer of two seconds each time we download a webpage.  
 }
 ```
+```{r}
+str1 = "hei"
+str2 = "på"
+paste(str1, str2, sep="")
+read_html(hovedkategorier_lastet[[1]])  
+```
 
+##underkategorier
+Lagrer bare en liste med underkategorier, må få opprettet en liste for hver hovedkategori i for-løkken. Nå blir det bare 23 underkategorier og. Buu. 
+```{r}
+# Make a list-object where you can put the output from the loop 
+for (i in 1:length(hovedkategori_lastet)) { 
+  underkategorier <- list() 
+# For each i in every element from place number one to the last place in hovedkategorier_lastet (given by length(hovedkategorier_lastet)) 
+  filnavn = paste("Data/hovedkategorier", hovedkategori_lastet[i], ".html", sep="")
+  # Read the html-page for each i 
+  underkategorier[i] <- read_html(filnavn)   %>% # Use this page 
+    html_nodes('a[class="ssb-category-link"]') %>% #again with the nodes
+    html_attr("href") # Then extract the text from these elements 
+  # Place the text for each link into its respective place in the info-object
+   
+}
+```
+
+
+
+## foreløpig irrelevant
 ```{r}
 # Step 3: Loop over every link and extract the text using the same procedure as shown before
 info <- list()  
